--- a/index.html
+++ b/index.html
@@ -1,86 +1,131 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HARGAJA-TECH | Network Services</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        header { background-color: #008474; color: white; padding: 20px; text-align: center; }
-        nav ul { list-style: none; padding: 0; margin: 0; display: flex; justify-content: center; background-color: #006d61; }
-        nav li { margin: 0 15px; }
-        nav a { color: white; text-decoration: none; font-weight: bold; }
-        main { padding: 40px; }
-        section { margin-bottom: 40px; }
-        h2 { color: #008474; margin-bottom: 10px; }
-        .service-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
-        .service-item { border: 1px solid #ddd; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-        footer { background-color: #006d61; color: white; padding: 20px; text-align: center; }
-        .gov-diagram { width: 100%; max-width: 600px; margin: 20px auto; display: block; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HARGAJA-TECH | Modern Network Services</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <style>
+    .gradient-text { background: linear-gradient(90deg, #008474, #006d61); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+  </style>
 </head>
-<body>
-    <header>
-        <h1>HARGAJA-TECH</h1>
-        <p>Innovative Network & Security Solutions</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#government">Government Solutions</a></li>
-            <li><a href="#contact">Contact</a></li>
+<body class="bg-gray-50 text-gray-800">
+  <header class="fixed w-full bg-white shadow-md z-50">
+    <div class="container mx-auto flex items-center justify-between p-4">
+      <h1 class="text-2xl font-bold gradient-text">HARGAJA-TECH</h1>
+      <nav>
+        <ul class="flex space-x-6">
+          <li><a href="index.html#services" class="hover:text-teal-600">Services</a></li>
+          <li><a href="government.html" class="hover:text-teal-600">Government</a></li>
+          <li><a href="index.html#contact" class="hover:text-teal-600">Contact</a></li>
         </ul>
-    </nav>
-    <main>
-        <section id="services">
-            <h2>Our Network Services</h2>
-            <div class="service-list">
-                <div class="service-item">
-                    <h3>Cisco Identity Services Engine (ISE)</h3>
-                    <p>Comprehensive identity management and access control for wired, wireless, and VPN networks.</p>
-                </div>
-                <div class="service-item">
-                    <h3>VPN Solutions</h3>
-                    <p>Secure remote access with IPSec, SSL, and Next-Gen VPN technologies.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Firewall & Intrusion Prevention</h3>
-                    <p>Stateful and next-generation firewalls with advanced threat prevention.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Network Architecture Design</h3>
-                    <p>Scalable and resilient network designs tailored to your organization's needs.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Switching & Routing</h3>
-                    <p>Implementation and optimization of Cisco Catalyst and Nexus switches, and enterprise routers.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Wireless LAN</h3>
-                    <p>Secure and high-performance wireless solutions with seamless mobility.</p>
-                </div>
-            </div>
-        </section>
-        <section id="government">
-            <h2>Government Network Structure</h2>
-            <p>Our tailored solutions for government agencies ensure secure and reliable connectivity across multiple sites.</p>
-            <img src="gov-network-diagram.png" alt="Government Network Structure Diagram" class="gov-diagram">
-            <ul>
-                <li>Central Data Center with redundant core routers and firewalls</li>
-                <li>Regional Offices connected via encrypted WAN links</li>
-                <li>Secure Access Points for remote employees</li>
-                <li>Centralized Monitoring with SIEM integration</li>
-                <li>Compliance with FISMA, NIST, and local regulations</li>
-            </ul>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Email: info@hargaja-tech.com | Phone: +383 44 123 456</p>
-            <p>Address: 123 Tech Park, Pristina, Kosovo</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 HARGAJA-TECH. All rights reserved.</p>
-    </footer>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="relative pt-24 h-screen bg-cover bg-center flex items-center justify-center" style="background-image: url('https://source.unsplash.com/1920x1080/?network,cybersecurity');">
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-gradient-to-r from-teal-900/60 to-teal-600/40"></div>
+    <div class="container mx-auto text-center text-white relative z-10" data-aos="fade-up">
+      <h2 class="text-4xl md:text-6xl font-extrabold mb-4 drop-shadow-lg">Secure. Scalable. Smart.</h2>
+      <p class="text-lg md:text-2xl mb-8 drop-shadow-md">Next-generation network & security solutions for modern enterprises.</p>
+      <a href="#services" class="px-8 py-3 bg-teal-600 hover:bg-teal-700 rounded-lg font-semibold transition">Explore Services</a>
+    </div>
+  </section>
+
+  <!-- SERVICES -->
+  <section id="services" class="container mx-auto py-20">
+    <div class="text-center mb-12" data-aos="fade-up">
+      <h3 class="text-3xl font-bold gradient-text">Our Services</h3>
+      <p class="mt-2 text-gray-600">Comprehensive solutions tailored to your needs</p>
+    </div>
+    <div class="grid gap-8 md:grid-cols-3 lg:grid-cols-4">
+      <div class="bg-white rounded-xl p-6 shadow-lg hover:shadow-xl transition" data-aos="fade-up">
+        <a href="ise.html" class="block p-6 bg-white rounded-xl shadow hover:shadow-xl transition text-center" data-aos="fade-up">
+        <img src="https://img.icons8.com/fluency/48/000000/lock.png" alt="ISE Icon" class="mx-auto mb-4">
+        <h4 class="text-xl font-semibold mb-2">Cisco ISE</h4>
+        <p class="text-gray-600">Identity management & access control for wired, wireless & VPN</p>
+        </a>
+      </div>
+      <div class="bg-white rounded-xl p-6 shadow-lg hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="100">
+        <a href="vpn.html" class="block p-6 bg-white rounded-xl shadow hover:shadow-xl transition text-center" data-aos="fade-up" data-aos-delay="100">
+        <img src="https://img.icons8.com/fluency/48/000000/vpn.png" alt="VPN Icon" class="mx-auto mb-4">
+        <h4 class="text-xl font-semibold mb-2">VPN Solutions</h4>
+        <p class="text-gray-600">IPSec, SSL & Next-Gen VPN for secure remote access</p>
+        </a>
+      </div>
+      <div class="bg-white rounded-xl p-6 shadow-lg hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="200">
+        <a href="firewall.html" class="block p-6 bg-white rounded-xl shadow hover:shadow-xl transition text-center" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://img.icons8.com/fluency/48/000000/firewall.png" alt="Firewall Icon" class="mx-auto mb-4">
+        <h4 class="text-xl font-semibold mb-2">Firewall & IPS</h4>
+        <p class="text-gray-600">Next-gen firewalls with advanced threat prevention</p>
+        </a>
+      </div>
+      <div class="bg-white rounded-xl p-6 shadow-lg hover:shadow-xl transition" data-aos="fade-up" data-aos-delay="300">
+        <a href="design.html" class="block p-6 bg-white rounded-xl shadow hover:shadow-xl transition text-center" data-aos="fade-up" data-aos-delay="300">
+        <img src="https://img.icons8.com/fluency/48/000000/network.png" alt="Architecture Icon" class="mx-auto mb-4">
+        <h4 class="text-xl font-semibold mb-2">Network Design</h4>
+        <p class="text-gray-600">Scalable, resilient architectures for optimum performance</p>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- GOVERNMENT SECTION -->
+  <section id="government" class="bg-white py-20">
+    <div class="container mx-auto grid gap-12 md:grid-cols-2 items-center">
+      <div data-aos="fade-right">
+        <h3 class="text-3xl font-bold gradient-text mb-4">Government Solutions</h3>
+        <p class="text-gray-600 mb-6">Secure, compliant network infrastructures for government agencies.</p>
+        <ul class="list-disc list-inside space-y-2 text-gray-600">
+          <li>Redundant Core Routers & Firewalls</li>
+          <li>Encrypted WAN Links Across Regions</li>
+          <li>Centralized SIEM & Monitoring</li>
+          <li>FISMA, NIST & Local Compliance</li>
+        </ul>
+      </div>
+      <div class="relative" data-aos="fade-left">
+        <img src="https://www.netscout.com/sites/default/files/shared/city-govt/Base-Image.svg" alt="Government Network" class="rounded-xl shadow-lg">
+        <span class="absolute top-4 right-4 bg-teal-600 text-white px-3 py-1 rounded-full text-sm">Example Diagram</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="container mx-auto py-20" data-aos="fade-up">
+    <h3 class="text-3xl font-bold gradient-text mb-4 text-center">Get In Touch</h3>
+    <p class="text-gray-600 mb-8 text-center">Ready to elevate your network security? Fill out the form below and our experts will reach out soon.</p>
+    <form action="#" method="POST" class="max-w-lg mx-auto bg-white p-8 rounded-xl shadow-lg">
+      <div class="mb-4">
+        <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
+        <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded-md p-3 focus:ring-2 focus:ring-teal-600 transition" placeholder="Your Name">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 font-medium mb-2">Email</label>
+        <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded-md p-3 focus:ring-2 focus:ring-teal-600 transition" placeholder="you@example.com">
+      </div>
+      <div class="mb-4">
+        <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
+        <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded-md p-3 focus:ring-2 focus:ring-teal-600 transition" placeholder="How can we help?"></textarea>
+      </div>
+      <button type="submit" class="w-full bg-teal-600 text-white py-3 rounded-md font-semibold hover:bg-teal-700 transition">Send Message</button>
+    </form>
+  </section>
+
+  <!-- FOOTER & SCRIPTS -->
+  <footer class="bg-gray-800 text-gray-400 py-6 text-center">
+    <p>&copy; 2025 HARGAJA-TECH. All rights reserved.</p>
+  </footer>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init({ duration:800, once:true });</script>
+</body>
+</html>
+
+  <!-- AOS Init -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init({ duration: 800, once: true });</script>
 </body>
 </html>
