--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-50 text-gray-800">
   <header class="fixed w-full bg-white shadow-md z-50">
     <div class="container mx-auto flex items-center justify-between p-4">
-      <h1 class="text-2xl font-bold gradient-text">HARGAJA-TECH</h1>
+      <h1 class="text-2xl font-bold gradient-text">HARGAJA-TECH UPDATE COMMIT</h1>
       <nav>
         <ul class="flex space-x-6">
           <li><a href="index.html#services" class="hover:text-teal-600">Services</a></li>
